5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4136/executions/1585_2894.log
== TEST (2019-03-21 11:24:09) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("100"))

# Calculo do valor a ser pago, incluindo o frete:
total = 145.0

# Impressao do valor total:
print(145 * 8)
-- OUTPUT:
1160
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:46:39) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
mohamed = (j1 = 100) + (j2 = 130) + (j3 = 110) + (j4 = 140) + (j5 = 120) + (j6 = 150) + (j7 = 170) + (j8 = 190) 
sony = (j1 = 200) + (j2 = 210) + (j3 = 250) + (j4 = 240) + (j5 = 220) + (j6 = 230) + (j7 = 270) + (j8 = 290)
microsoft = (j1 = 100) + (j2 = 110) + (j3 = 110) + (j4 = 120) + (j5 = 100) + (j6 = 105) + (j7 = 135) + (j8 = 195)
frete sedex = 45
var1 = float("mohamed:")
var2 = float("sony:")
var3 = float("microsoft:")
print(input("Escolha seu site de preferencia"))
# Leitura das entradas e conversao para float:
var = float(input("100"))

# Calculo do valor a ser pago, incluindo o frete:
total = 145.0

# Impressao do valor total:
print(145 * 8)
-- ERROR:
File "XXXX", line 3
    mohamed = (j1 = 100) + (j2 = 130) + (j3 = 110) + (j4 = 140) + (j5 = 120) + (j6 = 150) + (j7 = 170) + (j8 = 190) 
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:46:47) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
mohamed = (j1 = 100) + (j2 = 130) + (j3 = 110) + (j4 = 140) + (j5 = 120) + (j6 = 150) + (j7 = 170) + (j8 = 190) 
sony = (j1 = 200) + (j2 = 210) + (j3 = 250) + (j4 = 240) + (j5 = 220) + (j6 = 230) + (j7 = 270) + (j8 = 290)
microsoft = (j1 = 100) + (j2 = 110) + (j3 = 110) + (j4 = 120) + (j5 = 100) + (j6 = 105) + (j7 = 135) + (j8 = 195)
frete sedex = 45
var1 = float("mohamed:")
var2 = float("sony:")
var3 = float("microsoft:")
print(input("Escolha seu site de preferencia"))
# Leitura das entradas e conversao para float:
var = float(input("100"))

# Calculo do valor a ser pago, incluindo o frete:
total = 145.0

# Impressao do valor total:
print(145 * 8)
-- ERROR:
File "XXXX", line 3
    mohamed = (j1 = 100) + (j2 = 130) + (j3 = 110) + (j4 = 140) + (j5 = 120) + (j6 = 150) + (j7 = 170) + (j8 = 190) 
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:55:16) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
site1 = float(input(100 * quantidade + frete))
site2 = float(input(150 * quantidade + frete))
site3 = float(input(120 * quantidade + frete))
quantidade = 8
frete = 45
# Leitura das entradas e conversao para float:
var = float(input("100 * "))

# Calculo do valor a ser pago, incluindo o frete:
total = 145.0

# Impressao do valor total:
print(145 * 8)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    site1 = float(input(100 * quantidade + frete))
NameError: name 'quantidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:58:14) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input(100 * 8))
frete = 45
# Calculo do valor a ser pago, incluindo o frete:
total = jogo + frete

# Impressao do valor total:
print(total)
-- OUTPUT:
80046.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:58:57) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input(100 * 8))
frete = float(input(45))
# Calculo do valor a ser pago, incluindo o frete:
total = jogo + frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    frete = float(input(45))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:01:06) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input(100 * 8 + 45.0))
frete = float(input(45))
# Calculo do valor a ser pago, incluindo o frete:
total = jogo 

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    frete = float(input(45))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:01:38) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(100 * 8 + 45.0))

# Calculo do valor a ser pago, incluindo o frete:
total = jogo 

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = jogo 
NameError: name 'jogo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:01:46) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(100 * 8 + 45.0))

# Calculo do valor a ser pago, incluindo o frete:
total = jogo 

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = jogo 
NameError: name 'jogo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:03:15) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(100 * 8 + 45.0))

# Calculo do valor a ser pago, incluindo o frete:
#total = ???? 

# Impressao do valor total:
#print(????)
-- OUTPUT:
845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:26:56) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(100 * 8 + 45.0))

# Calculo do valor a ser pago, incluindo o frete:
#total = ???? 

# Impressao do valor total:
#print(????)
-- OUTPUT:
845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 12:27:01) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(100 * 8 + 45.0))

# Calculo do valor a ser pago, incluindo o frete:
#total = ???? 

# Impressao do valor total:
#print(????)
-- EXECUTION TIME:
0.20644
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:27:07) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(100 * 8 + 45.0))

# Calculo do valor a ser pago, incluindo o frete:
#total = ???? 

# Impressao do valor total:
#print(????)
-- OUTPUT:
845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:27:07) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(100 * 8 + 45.0))

# Calculo do valor a ser pago, incluindo o frete:
#total = ???? 

# Impressao do valor total:
#print(????)
-- OUTPUT:
845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:27:07) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(100 * 8 + 45.0))

# Calculo do valor a ser pago, incluindo o frete:
#total = ???? 

# Impressao do valor total:
#print(????)
-- OUTPUT:
845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:27:07) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(100 * 8 + 45.0))

# Calculo do valor a ser pago, incluindo o frete:
#total = ???? 

# Impressao do valor total:
#print(????)
-- OUTPUT:
845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:27:07) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(100 * 8 + 45.0))

# Calculo do valor a ser pago, incluindo o frete:
#total = ???? 

# Impressao do valor total:
#print(????)
-- OUTPUT:
845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:27:08) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(100 * 8 + 45.0))

# Calculo do valor a ser pago, incluindo o frete:
#total = ???? 

# Impressao do valor total:
#print(????)
-- OUTPUT:
845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:27:08) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(100 * 8 + 45.0))

# Calculo do valor a ser pago, incluindo o frete:
#total = ???? 

# Impressao do valor total:
#print(????)
-- OUTPUT:
845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:27:08) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(100 * 8 + 45.0))

# Calculo do valor a ser pago, incluindo o frete:
#total = ???? 

# Impressao do valor total:
#print(????)
-- OUTPUT:
845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:27:10) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(100 * 8 + 45.0))

# Calculo do valor a ser pago, incluindo o frete:
#total = ???? 

# Impressao do valor total:
#print(????)
-- OUTPUT:
845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:27:11) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(100 * 8 + 45.0))

# Calculo do valor a ser pago, incluindo o frete:
#total = ???? 

# Impressao do valor total:
#print(????)
-- OUTPUT:
845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:44:40) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
#total = (valor*8)+45.0

# Impressao do valor total:
#print(????)
-- OUTPUT:
845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:44:52) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
#total = (valor*8)+45.0

# Impressao do valor total:
#print(total)
-- OUTPUT:
845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:05) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor*8)+45.0

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:07) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor*8)+45.0

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor *8 ) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor *8 ) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor *8 ) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor *8 ) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor *8 ) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor *8 ) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor *8 ) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor *8 ) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor *8 ) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor *8 ) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor *8 ) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor *8 ) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor *8 ) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor *8 ) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor *8 ) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor *8 ) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor *8 ) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor *8 ) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor *8 ) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor *8 ) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor *8 ) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor *8 ) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor *8 ) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor *8 ) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor *8 ) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor *8 ) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor *8 ) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor *8 ) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor *8 ) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:42) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor *8 ) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:57) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor * 8 ) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 12:46:00) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor * 8 ) + 45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.153907
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:46:01) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitário  do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor * 8 ) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
